--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:layout_marginTop="60dp"
+    android:gravity="center"
     tools:context=".MainActivity">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/collun_one"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_marginRight="6dp"
+        android:layout_marginLeft="-24dp"
+        android:orientation="vertical" >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/plus_button"
+            style="@style/default_button"
+            android:text="@string/plus_button" />
+
+        <Button
+            android:id="@+id/seven_button"
+            style="@style/default_button"
+            android:text="@string/seven_button" />
+
+        <Button
+            android:id="@+id/four_button"
+            style="@style/default_button"
+            android:text="@string/four_button" />
+
+        <Button
+            android:id="@+id/one_button"
+            style="@style/default_button"
+            android:text="@string/one_button" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/collun_two"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginRight="6dp"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/minus_button"
+            style="@style/default_button"
+            android:text="@string/minus_button" />
+
+        <Button
+            android:id="@+id/eigth_button"
+            style="@style/default_button"
+            android:text="@string/eight_button" />
+
+        <Button
+            android:id="@+id/five_button"
+            style="@style/default_button"
+            android:text="@string/five_button" />
+
+        <Button
+            android:id="@+id/two_button"
+            style="@style/default_button"
+            android:text="@string/two_button" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/collun_three"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginRight="6dp"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/multiply_button"
+            style="@style/default_button"
+            android:text="@string/multiply_button" />
+
+        <Button
+            android:id="@+id/nine_button"
+            style="@style/default_button"
+            android:text="@string/nine_button" />
+
+        <Button
+            android:id="@+id/six_button"
+            style="@style/default_button"
+            android:text="@string/six_button" />
+
+        <Button
+            android:id="@+id/three_button"
+            style="@style/default_button"
+            android:text="@string/three_button" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/collun_four"
+        android:layout_width="wrap_content"
+        android:layout_height="542dp"
+        android:layout_marginRight="-24dp"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/division_button"
+            style="@style/default_button"
+            android:text="@string/division_button" />
+
+        <Button
+            android:id="@+id/igual_button"
+            style="@style/default_button"
+            android:layout_height="114dp"
+            android:text="@string/igual_button" />
+
+        <Button
+            android:id="@+id/zero_button"
+            style="@style/zero_button"
+            android:layout_height="244dp"
+            android:text="@string/zero_button" />
+
+    </LinearLayout>
+
+</LinearLayout>
