--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="default_button">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">120dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_margin">3dp</item>
     </style>
     <style name="zero_button">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">240dp</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:layout_marginRight">3dp</item>
-        <item name="android:layout_marginLeft">2dp</item>
-        <item name="android:layout_marginTop">3.6dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">2</item>
     </style>
-    <style name="default_line_button">
-        <item name="android:layout_width">97dp</item>
-        <item name="android:layout_height">120dp</item>
+    <style name="default_linear_layout">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_margin">3dp</item>
+        <item name="android:layout_marginTop">120dp</item>
+        <item name="android:orientation">vertical</item>
     </style>
 </resources>
